--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Compile ICU strings to functions",
   "repository": "",
   "license": "MIT",
+  "scripts": {
+    "test": "jest test"
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -24,7 +27,6 @@
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/helper-plugin-test-runner": "^7.8.3",
-    "babel-jest": "^24.9.0",
     "jest": "^24.9.0"
   }
 }
