--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@babel/core": "^7.14.0",
     "@babel/helper-plugin-utils": "^7.14.0",
-    "intl-messageformat-parser": "^6.4.4"
+    "@formatjs/icu-messageformat-parser": "^2.0.14"
   },
   "keywords": [
     "babel-plugin",
