--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-precompile-intl",
-  "version": "0.4.0-beta.0",
+  "version": "0.4.0-beta.1",
   "description": "Compile translations in ICU message format to invocable functions at build time",
   "repository": "https://github.com/cibernox/babel-plugin-precompile-intl",
   "author": {
@@ -9,13 +9,14 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "jest test"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest test"
   },
   "publishConfig": {
     "access": "public"
   },
   "main": "src/index.js",
   "module": "src/index.js",
+  "type": "module",
   "dependencies": {
     "@babel/core": "^7.14.0",
     "@babel/helper-plugin-utils": "^7.14.0",
@@ -32,7 +33,7 @@
     "@babel/core": "^7.0.0-0"
   },
   "devDependencies": {
-    "jest": "^27.3.0"
+    "jest": "^28.1.0"
   },
   "volta": {
     "node": "16.15.0"
