--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "module": "src/index.js",
   "type": "module",
   "dependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/helper-plugin-utils": "^7.14.0",
+    "@babel/core": "^7.0.0-0",
+    "@babel/helper-plugin-utils": "^7.17.0",
     "@formatjs/icu-messageformat-parser": "^2.1.2"
   },
   "keywords": [
@@ -33,7 +33,11 @@
     "@babel/core": "^7.0.0-0"
   },
   "devDependencies": {
-    "jest": "^28.1.0"
+    "@babel/types": "^7.18.4",
+    "@types/babel__helper-plugin-utils": "^7.10.0",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.3",
+    "typescript": "^4.7.2"
   },
   "volta": {
     "node": "16.15.0"
