--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
       "module": "ESNext",
       "target": "ES2020",
-      "noEmit": true,
       "moduleResolution": "node",
       "forceConsistentCasingInFileNames": true,
       "strict": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "outDir": "./dist",
+      "rootDir": "./src"
   }
 }
