--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-precompile-intl",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Compile translations in ICU message format to invocable functions at build time",
   "repository": "https://github.com/cibernox/babel-plugin-precompile-intl",
   "author": {
@@ -15,8 +15,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "src/index.js",
-  "module": "src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "type": "module",
   "dependencies": {
     "@babel/core": "^7.0.0-0",
